Corrected alignment.

--- a/second/index.css
+++ b/second/index.css
@@ -60,16 +60,19 @@ body {
 }
 
 .bottom-row-box {
-    height: 35vh;
+    height: 25vh;
     width: 100vw;
+    position: relative;
+    text-align: center;
 }
     
-.bottom-left-corner {
+/* .bottom-left-corner {
     display: inline-block;
     height: 90%;
-    width: 25%;
+    width: 23%;
     margin: 0 auto;
-}
+    position: absolute;
+} */
 
 .hello-friends-box {
     display: inline-block;
@@ -78,8 +81,21 @@ body {
     height: 90%;
     width: 50%;
     margin: 5px;
-}
+    font-weight: 1000;
+    font-family: 'Noto Serif', serif;
+    font-family: 'Stint Ultra Expanded', cursive;
+    color: navy;
+    letter-spacing: 4px;
+    padding-top: 80px;
+ }   
 
-.bottom-right-corner {
-    
-}
+
+/* .bottom-right-corner {
+    display: inline-block;
+    height: 90%;
+    width: 23%;
+    margin: 0 auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+} */
